Filter buttons css fixed on mobile

--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -8,8 +8,15 @@
     color: whitesmoke;
 }
 
+.filter_button:hover {
+    background-color: #48975d;
+    border-color: #48975d;
+}
+
+
 .filters_close,
 .filter_button,
+.filter_button:focus,
 .clear_button,
 .apply_button {
     color: whitesmoke;
@@ -20,6 +27,7 @@
     background: none;
     transition: background-color 200ms, color 200ms, border-color 200ms;
 }
+
 
 
 .filters_close {
